fixing dark mode for calling apis

--- a/auth4genai/style.css
+++ b/auth4genai/style.css
@@ -296,6 +296,23 @@ p[data-component-part="accordion-title"] {
   background: #F4F4F4;
 }
 
+:is(.dark *) #ai-tools > div {
+  background: rgb(255 255 255/.05);
+}
+
+:is(.dark *) #ai-tools div[data-component-part="tabs-list"] {
+  background: rgb(255 255 255/.05);
+}
+
+#ai-tools div[data-component-part="tab-content"] {
+  background:#ffffff !important;
+}
+
+:is(.dark *) #ai-tools div[data-component-part="tab-content"] {
+  background:rgb(255 255 255/.05) !important;
+  border-color: rgb(255 255 255 / .1) !important;
+}
+
 #ai-tools div[data-component-part="tab-content"]{
   background: white;
   /* margin-left: -4px; */
